v2.52:
- added commandline-parameter "commands": commands will be loaded before execution

v2.53:
- if variables or functions are modified, the user will be prompted on exiting
- prompting for each input-line
- on load the loaded variables and functions are shown

v2.54:
- it's possible to set the display-precision of the post decimals: from the commandline and whithin the interactive-mode.
- values will won't be displayed in scientific-mode anymore (due to syntaxchecking problems on loading functions).
- if the upper bound of a Sum or a Prod is less then the startvalue 0 is returned
- command "builtins" shows all buitlin-functions ans -operators

v2.55:
- entry will only be added to history if it's not a copy of the previous entry

v2.56:
- blanks won't raise a syntax-error