@@ -1,1 +1,2 @@
-float-values with more then one dot will be accepted: e.g. the number 1.2.3 will be regarded as 1.2.
+- float-values with more then one dot will be accepted: e.g. the number 1.2.3 will be regarded as 1.2.
+- error-arrow sometimes doesn't point to the exact position
