@@ -70,5 +70,6 @@ void removeVariables(mexp::VarList *vl, LineScanner & lscanner);
 void save(mexp::VarList *vl, mexp::FunctionList *fl, std::streamsize precision, std::string filename, LineScanner & lscanner);
 void load(mexp::VarList *vl, mexp::FunctionList *fl, std::string filename, bool interactive);
 bool checkAnswer(const std::string & text);
+void printErrorArrow(int pos);
 
 #endif
